@@ -2,9 +2,7 @@ Installation on most systems is rather straightforward - as the bulk of the
 PDB2PQR code is written in Python, the PDB2PQR code itself is 
 architecture/compiler independent. PDB2PQR has been tested using Python 
 versions 2.2 through 2.5 - problems may occur with older versions. 
-The PropKa code, however, is written in Fortran - and thus to use it with 
-PDB2PQR a two step installation is necessary, making use of available C and 
-Fortran compilers:
+PDB2PQR will need to be configured in order to run:
 
     $ ./configure (see ./configure -help for more options)
       Configure parameters
@@ -16,11 +14,13 @@ Fortran compilers:
         --with-apbs       Enable the APBS web service. Must be pointing to a local APBS binary (requires APBS 1.1.0 or newer version)
         --with-apbs-opal  Enable APBS Opal web service. Default is http://kryptonite.nbcr.net/opal2/services/apbs_1.3
         NUMPY             Location of Numpy. Default is $PY_DIR/lib/python$PY_VERSION/site-packages/numpy/core/include/numpy
+
+Compiling and installing is only needed if you plan to set up the web service, run pdb2pka, or use mol files:
         
     $ make
     $ make install
 
-This should compile the PropKa wrappers necessary to interface with PDB2PQR.
+This should compile the pdb2pka wrappers necessary to interface with PDB2PQR.
 
 However, if you would like to enable pdb2pka, then you must have Numpy installed.
 http://numpy.scipy.org/
