@@ -1215,6 +1215,7 @@ def unpickleVars(pdb2pqrID):
     elif myElec.npbe == 1:
         apbsOptions['solveType'] = 'nonlinearized'
 
+    #TODO: Currently this is not used.
     if len(myElec.ion) == 0:
         apbsOptions['mobileIonSpecies[0]'] = None
     else:
@@ -1423,12 +1424,15 @@ def fieldStorageToDict(form):
     apbsOptions['calcForce'] = form["calcforce"].value
 
     for i in range(0,3):
-        if form['charge%i' % i].value != "":
-            apbsOptions['mobileIonSpeciesCharge'] = locale.atoi(form['charge%i' % i].value)
-        if form['conc%i' % i].value != "":
-            apbsOptions['mobileIonSpeciesConcentration'] = locale.atof(form['conc%i' % i].value)
-        if form['radius%i' % i].value != "":
-            apbsOptions['mobileIonSpeciesRadius'] = locale.atof(form['radius%i' % i].value)
+        chStr = 'charge%i' % i
+        concStr = 'conc%i' % i
+        radStr = 'radius%i' % i
+        if form[chStr].value != "":
+            apbsOptions[chStr] = locale.atoi(form[chStr].value)
+        if form[concStr].value != "":
+            apbsOptions[concStr] = locale.atof(form[concStr].value)
+        if form[radStr].value != "":
+            apbsOptions[radStr] = locale.atof(form[radStr].value)
     apbsOptions['writeFormat'] = form["writeformat"].value
     #apbsOptions['writeStem'] = apbsOptions['pqrFileName'][:-4]
     apbsOptions['writeStem'] = form["pdb2pqrid"].value
@@ -1509,9 +1513,16 @@ def pqrFileCreator(apbsOptions):
     input.write('%stemp %g\n' % (apbsOptions['tab'], apbsOptions['temperature']))
     input.write('%scalcenergy %s\n' % (apbsOptions['tab'], apbsOptions['calcEnergy']))
     input.write('%scalcforce %s\n' % (apbsOptions['tab'], apbsOptions['calcForce']))
-    if apbsOptions.has_key('mobileIonSpeciesCharge') and apbsOptions.has_key('conc') and apbsOptions.has_key('radius'):
-        input.write('%sion %d %g %g\n' % (apbsOptions['tab'], apbsOptions['mobileIonSpeciesCharge'], apbsOptions['mobileIonSpeciesConcentration'], apbsOptions['mobileIonSpeciesRadius']))
-
+    for i in range(0,3):
+        chStr = 'charge%i' % i
+        concStr = 'conc%i' % i
+        radStr = 'radius%i' % i
+        if apbsOptions.has_key(chStr) and apbsOptions.has_key(concStr) and apbsOptions.has_key(radStr):
+            #ion charge {charge} conc {conc} radius {radius}
+            input.write('%sion charge %d conc %g radius %g\n' % (apbsOptions['tab'], 
+                                                                 apbsOptions[chStr], 
+                                                                 apbsOptions[concStr], 
+                                                                 apbsOptions[radStr]))
 
     if apbsOptions['writeCharge']:
         input.write('%swrite charge %s %s-charge\n' % (apbsOptions['tab'], apbsOptions['writeFormat'], apbsOptions['writeStem']))
