@@ -7,5 +7,7 @@ Please see http://www.poissonboltzmann.org/pdb2pqr/release-history
  * Added newresinter plugin.
  
 - BUG FIXES
+ * Rolled back change that prevented plugins from interfering with each other. Large proteins would cause a stack overflow when trying to do a deep copy.
+ * Updated INSTALL file to reflect no more need for Fortran.
  * Fixed user specified mobile ion species not being passed to apbs input file.
 
